# netbox_geoip

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
netbox_geoip/: __init__.py  admin.py  extensions.py  filtersets.py  forms.py  models.py  navigation.py  signals.py  tables.py  urls.py  utils.py  views.py
netbox_geoip/api/: serializers.py  urls.py  views.py
netbox_geoip/data/: countries.csv  regions.csv
netbox_geoip/migrations/: 0001_initial.py  0002_load_country_data.py  0003_load_region_data.py  0004_create_custom_fields.py  0005_update_ipam_urls.py  0006_alter_country_and_region_options.py
netbox_geoip/templates/netbox_geoip/: country.html  region.html
