[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-geoip"
version = "1.0"
description = "NetBox plugin for Public IP Geolocation"

classifiers=[
    'Development Status :: 1 - Beta',
    'Intended Audience :: Netbox',
    'Natural Language :: English',
]

requires-python = ">=3.10.0"
