[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-geoip"
version = "1.1"
description = "NetBox plugin for Public IP Geolocation"

classifiers=[
    'Intended Audience :: Netbox',
    'Natural Language :: English',
]

requires-python = ">=3.10.0"
